--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.17",
     "chart.js": "^4.5.1",
+    "classnames": "^2.5.1",
     "firebase": "^12.6.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
